<resources>
    <string name="app_name">Group2_Blackjack</string>
    <string name="login_txt">Blackjack</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="play_now">Play As a Guest</string>
    <string name="username_label">Username: </string>
    <string name="username_hint">Enter username..</string>
    <string name="pw_label">Password</string>
    <string name="pw_hint">Enter password..</string>
    <string name="pw_confirm_label">Confirm password</string>
    <string name="pw_confirm_hint">Enter password again..</string>
    <string name="register_title">REGISTER</string>
    <string name="login_title">LOGIN</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="btn_deal">Deal</string>
    <string name="btn_hit">Hit</string>
    <string name="btn_stand">Stand</string>
    <string name="coin_10">$10</string>
    <string name="coin_20">$20</string>
    <string name="coin_50">$50</string>
    <string name="coin_100">$100</string>
    <string name="btn_ranking">Ranking</string>
    <string name="btn_double">Double</string>
    <string name="btn_clear">Clear</string>
    <string name="bet">Bet: </string>
    <string name="player">Player: </string>
    <string name="Balance">Balance: </string>
    <string name="Score">Score: </string>
    <string name="dealPoint">Dealer Point: </string>
    <string name="userPoint">User Point: </string>
    <string name="dealer">Dealer</string>
    <string name="contentDescription_ai_card1">ai_card1</string>
    <string name="contentDescription_ai_card2">ai_card2</string>
    <string name="contentDescription_ai_card3">ai_card3</string>
    <string name="contentDescription_ai_card4">ai_card4</string>
    <string name="contentDescription_ai_card5">ai_card5</string>
    <string name="contentDescription_user_card1">user_card1</string>
    <string name="contentDescription_user_card2">user_card2</string>
    <string name="contentDescription_user_card3">user_card3</string>
    <string name="contentDescription_user_card4">user_card4</string>
    <string name="contentDescription_user_card5">user_card5</string>
    <string name="contentDescription_logo">logo</string>
</resources>