<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom|center"
                android:text="@string/register_title"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="bottom"
                android:minHeight="40dp"
                android:text="@string/username_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#434343"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="bottom"
                android:minHeight="40dp"
                android:text="@string/pw_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/pw_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#434343"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/password_confirm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="bottom"
                android:minHeight="40dp"
                android:text="@string/pw_confirm_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_confirm_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:hint="@string/pw_confirm_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#434343"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit_btn"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#00BCD4" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>